@@ -22,11 +22,22 @@ dependencies {
     implementation("info.picocli:picocli:4.7.0") // CLI library
     testImplementation("org.junit.jupiter:junit-jupiter:5.10.0") // Testing
     testImplementation("org.assertj:assertj-core:3.24.2") // AssertJ for fluent assertions
-    implementation("org.jetbrains:annotations:24.0.1")
+    implementation("org.jetbrains:annotations:24.0.1") // JetBrains annotations for nullability
 }
 
 tasks.test {
     useJUnitPlatform()
+    jvmArgs("--enable-preview") // Enable preview features for tests
+}
+
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(21)) // Use Java 21
+    }
+}
+
+tasks.withType<JavaCompile>().configureEach {
+    options.compilerArgs.add("--enable-preview") // Enable preview features during compilation
 }
 
 checkstyle {
@@ -47,7 +58,7 @@ jacoco {
 }
 
 tasks.jacocoTestReport {
-    dependsOn(tasks.test)
+    dependsOn(tasks.test) // Ensure Jacoco runs after tests
     reports {
         xml.required.set(true)
         html.required.set(true)
